--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
       "run_at": "document_start"
     }
   ],
-  "permissions": ["activeTab", "scripting"],
+  "permissions": [],
   "host_permissions": ["<all_urls>"],
   "web_accessible_resources": [
     {
